Got click and drag working correctly.

--- a/test.html
+++ b/test.html
@@ -9,5 +9,7 @@
 </head>
 <body>
 <canvas id="myCanvas" width="500" height="500"></canvas>
+<button id="drawCircle">Draw Circle</button>
+<button id="moveCircle">Move Circle</button>
 </body>
 </html>
