Got click and drag working correctly.

--- a/test.html
+++ b/test.html
@@ -11,5 +11,6 @@
 <canvas id="myCanvas" width="500" height="500"></canvas>
 <button id="drawCircle">Draw Circle</button>
 <button id="moveCircle">Move Circle</button>
+<button id="paint">Paint</button>
 </body>
 </html>
