--- a/Code/test.html
+++ b/Code/test.html
@@ -8,9 +8,10 @@
     <script type="text/javascript" src="test.js"></script>
 </head>
 <body>
-<canvas id="myCanvas" width="500" height="500"></canvas>
+<canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">No canvas support</canvas>
 <button id="drawCircle">Draw Circle</button>
 <button id="moveCircle">Move Circle</button>
 <button id="paint">Paint</button>
+<div id="status"></div>
 </body>
 </html>
