Trying to do drag text....

--- a/Code/animation.html
+++ b/Code/animation.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <link href="test.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="noanimation.js"></script>
+    <script type="text/javascript" src="animation.js"></script>
 </head>
 <body>
 <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">No canvas support</canvas>
 <button id="drawCircle">Draw Circle</button>
-<button id="moveCircle">Move Circle</button>
+<button id="moveText">Move Circle</button>
 <button id="paint">Paint</button>
 <div id="status"></div>
-<div id="syllogismMet"></div>
 </body>
 </html>
