--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;">No canvas support</canvas>
-<button id="drawCircle">Draw Circle</button>
-<button id="moveCircle">Move Circle</button>
-<button id="paint">Paint</button>
+<button id="moveText">Move Text</button>
+<button id="playGame">Play Game</button>
 <div id="status"></div>
 <div id="syllogismMet"></div>
 </body>
