Fixed colour issue and checking if answer is correct

--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -13,5 +13,7 @@
 <button id="playGame">Play Game</button>
 <div id="status"></div>
 <div id="syllogismMet"></div>
+<div id="barbaraArray"></div>
+<div id="array"></div>
 </body>
 </html>
