Load game in from JSON

--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="wrapper">
-    <canvas id="layer2" style="z-index: 2;" width="600" height="600" style="border:1px solid #000000;">No canvas support</canvas>
-    <canvas id="layer1" style="z-index: 1;" width="600" height="600" style="border:1px solid #000000;">No canvas support</canvas>
+    <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
+    <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
 </div>
 <div id="status"></div>
 <div id="syllogismMet"></div>
