--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <link href="test.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="arrayHelper.js" type="text/javascript"></script>
-    <script type="text/javascript" src="noanimation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="scripts/arrayHelper.js" type="text/javascript"></script>
+    <script data-main="scripts/main" src="scripts/require.js"></script>
+    <script type="text/javascript" src="scripts/noanimation.js"></script>
 </head>
 <body>
 
