--- a/Code/dragTextUndoTest.html
+++ b/Code/dragTextUndoTest.html
@@ -8,12 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
     <script src = "scripts/floodFill2D.js"></script>
-    <script type="text/javascript" src="scripts/noanimation.js"></script>
+    <script type="text/javascript" src="scripts/dragTextUndoTest.js"></script>
 </head>
 <body>
 
 <div class="wrapper">
-    <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
 </div>
 <button id="undoButon">Undo</button>
