--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
-    <script src = "scripts/floodFill2D.js"></script>
+    <script src="scripts/floodFill2D.js"></script>
     <script type="text/javascript" src="scripts/noanimation.js"></script>
 </head>
 <body>
@@ -16,7 +16,11 @@
     <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
 </div>
-<button id="undoButon">Undo</button>
+
+
+<button id="undoButton" style="z-index: 3">Undo</button>
 <button id="redoButton">Redo</button>
+
+
 </body>
 </html>
