--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -16,11 +16,7 @@
     <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
 </div>
-
-
 <button id="undoButton" style="z-index: 3">Undo</button>
-<button id="redoButton">Redo</button>
-
-
+<button id="redoButton" style="z-index: 3">Redo</button>
 </body>
 </html>
