--- a/Code/noanimation.html
+++ b/Code/noanimation.html
@@ -15,8 +15,9 @@
 <div class="wrapper">
     <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
+    <input class="undoImage" type="image" style="z-index: 3" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
+    <input class="undoImage" type="image" style="z-index: 3" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
+    <input class="refreshImage" type="image" style="z-index: 3" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
 </div>
-<button id="undoButton" style="z-index: 3">Undo</button>
-<button id="redoButton" style="z-index: 3">Redo</button>
 </body>
 </html>
