--- a/Code/game.html
+++ b/Code/game.html
@@ -3,12 +3,12 @@
 <head>
     <title>Implementing advanced animation</title>
     <meta charset="utf-8">
-    <link href="test.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
     <script src="scripts/floodFill2D.js"></script>
-    <script type="text/javascript" src="scripts/noanimation.js"></script>
+    <script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body>
 
