--- a/Code/game.html
+++ b/Code/game.html
@@ -13,6 +13,8 @@
 <body>
 
 <div class="wrapper">
+    <canvas id="tutorialCanvas" style="z-index: 3;" width="600" height="600">No canvas support</canvas>
+    <canvas id="circleBorder" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer3" style="z-index: 3;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
