Kind of working depending on browser size

--- a/Code/game.html
+++ b/Code/game.html
@@ -13,11 +13,11 @@
 <body>
 
 <div class="wrapper">
-    <canvas id="tutorialCanvas" style="z-index: 3;" width="600" height="600">No canvas support</canvas>
-    <canvas id="circleBorder" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
-    <canvas id="layer3" style="z-index: 3;" width="600" height="600">No canvas support</canvas>
-    <canvas id="layer2" style="z-index: 2;" width="600" height="600">No canvas support</canvas>
-    <canvas id="layer1" style="z-index: 1;" width="600" height="600">No canvas support</canvas>
+    <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
+    <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
+    <canvas id="layer1" style="z-index: 1;" >No canvas support</canvas>
     <input class="undoImage" type="image" style="z-index: 3" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
     <input class="redoImage" type="image" style="z-index: 3" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
     <input class="refreshImage" type="image" style="z-index: 3" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
