--- a/Code/game.html
+++ b/Code/game.html
@@ -8,12 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
     <script src="scripts/floodFill2D.js"></script>
+    <script src="scripts/throttle.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body>
 
 <div class="wrapper">
     <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="circleHighlightCanvas" style="z-index: 3;">No canvas support</canvas>
     <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
