Add arrows to tutorial

--- a/Code/game.html
+++ b/Code/game.html
@@ -20,10 +20,13 @@
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" >No canvas support</canvas>
-    <input class="undoImage" type="image" style="z-index: 3" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
-    <input class="redoImage" type="image" style="z-index: 3" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
-    <input class="refreshImage" type="image" style="z-index: 3" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
-    <input class="nextLevel" type="image" style="z-index: 3" id="nextLevelButton" src="images/navigate_next_black_192x192.png"/>
+    <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
+    <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
+    <input class="refreshImage noselect" type="image" style="z-index: 4" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
+    <input class="nextLevel noselect" type="image" style="z-index: 4" id="nextLevelButton" src="images/navigate_next_black_192x192.png"/>
+    <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards" src="images/right-arrow-forward.png"/>
+    <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards" src="images/go-back-left-arrow.png"/>
+    <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial" src="images/ic_help_outline_black_48dp_2x.png"/>
 </div>
 </body>
 </html>
