--- a/Code/game.html
+++ b/Code/game.html
@@ -9,7 +9,7 @@
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
     <script src="scripts/floodFill2D.js"></script>
     <script src="scripts/throttle.js"></script>
-    <script type="text/javascript" src="scripts/game.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
 
