--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="Code/scripts/arrayHelper.js" type="text/javascript"></script>
     <script src="Code/scripts/floodFill2D.js"></script>
     <script src="Code/scripts/throttle.js"></script>
-    <script type="text/javascript" src="Code/scripts/game.js"></script>
+    <script type="text/javascript" src="Code/game.js"></script>
 </head>
 <body>
 
