--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>Implementing advanced animation</title>
     <meta charset="utf-8">
-    <link href="Code/style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="Code/scripts/arrayHelper.js" type="text/javascript"></script>
-    <script src="Code/scripts/floodFill2D.js"></script>
-    <script src="Code/scripts/throttle.js"></script>
-    <script type="text/javascript" src="Code/game.js"></script>
+    <script src="scripts/arrayHelper.js" type="text/javascript"></script>
+    <script src="scripts/floodFill2D.js"></script>
+    <script src="scripts/throttle.js"></script>
+    <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
 
@@ -20,13 +20,13 @@
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" >No canvas support</canvas>
-    <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="Code/images/ic_undo_black_48dp_2x.png"/>
-    <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton" src="Code/images/ic_redo_black_48dp_2x.png"/>
-    <input class="refreshImage noselect" type="image" style="z-index: 4" id="refreshButton" src="Code/images/ic_refresh_black_48dp_2x.png"/>
-    <input class="nextLevel noselect" type="image" style="z-index: 4" id="nextLevelButton" src="Code/images/navigate_next_black_192x192.png"/>
-    <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards" src="Code/images/right-arrow-forward.png"/>
-    <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards" src="Code/images/go-back-left-arrow.png"/>
-    <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial" src="Code/images/ic_help_outline_black_48dp_2x.png"/>
+    <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
+    <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
+    <input class="refreshImage noselect" type="image" style="z-index: 4" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
+    <input class="nextLevel noselect" type="image" style="z-index: 4" id="nextLevelButton" src="images/navigate_next_black_192x192.png"/>
+    <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards" src="images/right-arrow-forward.png"/>
+    <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards" src="images/go-back-left-arrow.png"/>
+    <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial" src="images/ic_help_outline_black_48dp_2x.png"/>
 </div>
 </body>
 </html>
