Trying to support mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="wrapper">
     <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
-    <canvas id="circleHighlightCanvas" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="guidelines" style="z-index: 3;">No canvas support</canvas>
     <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
