--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards" src="images/right-arrow-forward.png"/>
     <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards" src="images/go-back-left-arrow.png"/>
     <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial" src="images/ic_help_outline_black_48dp_2x.png"/>
-    <input class="skipLevel noselect" type="image" style="z-index: 4" id="skipLevel" src="images/ic_help_outline_black_48dp_2x.png"/>
+    <!--<input class="skipLevel noselect" type="image" style="z-index: 4" id="skipLevel" src="images/ic_help_outline_black_48dp_2x.png"/>-->
 </div>
 </body>
 </html>
