Working version for demonstration of progress

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
     <script src="scripts/floodFill2D.js"></script>
     <script src="scripts/throttle.js"></script>
+    <!--<script src="scripts/confetti.js"></script>-->
     <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
@@ -16,9 +17,10 @@
 <!--<div style="font-family: 'comicNeue';">Test</div>-->
 <div class="wrapper">
     <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
-    <canvas id="guidelines" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="circleOutlineCanvas" style="z-index: 3;" >No canvas support</canvas>
     <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
+    <canvas id="layer4" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;" >No canvas support</canvas>
     <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
