--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="scripts/floodFill2D.js"></script>
     <script src="scripts/throttle.js"></script>
     <!--<script src="scripts/confetti.js"></script>-->
+    <script type='application/javascript' src='/scripts/fastclick.js'></script>
     <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
