--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Implementing advanced animation</title>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link type="text/css" rel="stylesheet" href="materialize.min.css" media="screen,projection"/>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="scripts/arrayHelper.js" type="text/javascript"></script>
@@ -12,26 +14,33 @@
     <!--<script src="scripts/confetti.js"></script>-->
     <script type='application/javascript' src='/scripts/fastclick.js'></script>
     <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="materialize.min.js"></script>
 </head>
 <body>
 
-<!--<div style="font-family: 'comicNeue';">Test</div>-->
 <div class="wrapper">
     <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
-    <canvas id="circleOutlineCanvas" style="z-index: 3;" >No canvas support</canvas>
+    <canvas id="circleOutlineCanvas" style="z-index: 3;">No canvas support</canvas>
     <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer3" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer4" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
-    <canvas id="layer1" style="z-index: 1;" >No canvas support</canvas>
-    <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="images/ic_undo_black_48dp_2x.png"/>
-    <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton" src="images/ic_redo_black_48dp_2x.png"/>
-    <input class="refreshImage noselect" type="image" style="z-index: 4" id="refreshButton" src="images/ic_refresh_black_48dp_2x.png"/>
-    <input class="nextLevel noselect" type="image" style="z-index: 4" id="nextLevelButton" src="images/navigate_next_black_192x192.png"/>
-    <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards" src="images/right-arrow-forward.png"/>
-    <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards" src="images/go-back-left-arrow.png"/>
-    <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial" src="images/ic_help_outline_black_48dp_2x.png"/>
-    <!--<input class="skipLevel noselect" type="image" style="z-index: 4" id="skipLevel" src="images/ic_help_outline_black_48dp_2x.png"/>-->
+    <canvas id="layer1" style="z-index: 1;">No canvas support</canvas>
+    <span id="levelSelect" class="levelSelect">Level 1</span>
+    <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton"
+           src="images/ic_undo_black_48dp_2x.png"/>
+    <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton"
+           src="images/ic_redo_black_48dp_2x.png"/>
+    <input class="refreshImage noselect" type="image" style="z-index: 4" id="refreshButton"
+           src="images/ic_refresh_black_48dp_2x.png"/>
+    <input class="nextLevel noselect" type="image" style="z-index: 4" id="nextLevelButton"
+           src="images/navigate_next_black_192x192.png"/>
+    <input class="tutorialForwards noselect" type="image" style="z-index: 4" id="tutorialForwards"
+           src="images/right-arrow-forward.png"/>
+    <input class="tutorialBackwards noselect" type="image" style="z-index: 4" id="tutorialBackwards"
+           src="images/go-back-left-arrow.png"/>
+    <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial"
+           src="images/ic_help_outline_black_48dp_2x.png"/>
 </div>
 </body>
 </html>
