--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type='application/javascript' src='/scripts/fastclick.js'></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="materialize.min.js"></script>
+    <script src='scripts/google-sheet.js'></script>
 </head>
 <body>
 
