--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="materialize.min.js"></script>
     <script src='scripts/google-sheet.js'></script>
+    <script src="scripts/sheetrock.min.js"></script>
 </head>
 <body>
 
 <div class="wrapper">
+    <table id="statistics" class="table table-condensed table-striped"></table>
     <canvas id="tutorialCanvas" style="z-index: 3;">No canvas support</canvas>
     <canvas id="circleOutlineCanvas" style="z-index: 3;">No canvas support</canvas>
     <canvas id="circleBorder" style="z-index: 2;">No canvas support</canvas>
@@ -42,6 +44,8 @@
            src="images/go-back-left-arrow.png"/>
     <input class="tutorial noselect" type="image" style="z-index: 4" id="tutorial"
            src="images/ic_help_outline_black_48dp_2x.png"/>
+    <input class="skip noselect" type="image" style="z-index: 4" id="skip"
+           src="images/fast-forward-arrows.png"/>
 </div>
 </body>
 </html>
