--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
     <!--<link type="text/css" rel="stylesheet" href="materialize.min.css" media="screen,projection"/>-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 </head>
