Fixed floodfill by adding new Canvas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
+
 </head>
 
 <body>
@@ -36,6 +37,7 @@
     <canvas id="layer4" style="z-index: 3;">No canvas support</canvas>
     <canvas id="layer2" style="z-index: 2;">No canvas support</canvas>
     <canvas id="layer1" style="z-index: 1;">No canvas support</canvas>
+    <canvas id="staticTextCanvas" style="z-index: 1;">No canvas support</canvas>
     <span id="levelSelect" class="levelSelect">Level 1</span>
     <input class="undoImage noselect" type="image" style="z-index: 4" id="undoButton" src="images/ic_undo_black_48dp_2x.png" />
     <input class="redoImage noselect" type="image" style="z-index: 4" id="redoButton" src="images/ic_redo_black_48dp_2x.png" />
