--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/png" href="js/lib/jasmine-2.5.2/jasmine_favicon.png">
     <link rel="stylesheet" href="js/lib/jasmine-2.5.2/jasmine.css">
 
+    <table id="spreadsheet"></table>
+
     <script src="js/lib/jasmine-2.5.2/jasmine.js"></script>
     <script src="js/lib/jasmine-2.5.2/jasmine-html.js"></script>
     <script src="js/lib/jasmine-2.5.2/boot.js"></script>
@@ -20,6 +22,7 @@
     <script type="text/javascript" src="js/game.js"></script>
     <script src='js/lib/google-sheet.js'></script>
     <script src="js/lib/sheetrock.min.js"></script>
+    <script src="js/lib/google-spreadsheet.js"></script>
 
     <!-- include source files here... -->
     <script src="js/eventHandlers.js"></script>
@@ -32,6 +35,8 @@
 
     <!-- include spec files here... -->
     <script src="js/spec/GameSpec.js"></script>
+    <script src="js/lib/jquery.tabletojson.js"></script>
+    <script src="js/lib/jquery.tabletojson.min.js"></script>
 
 </head>
 
