--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <script type="text/javascript" src="js/game.js"></script>
 <script src='js/lib/google-sheet.js'></script>
 <script src="js/lib/sheetrock.min.js"></script>
+<script src="js/lib/jquery.tabletojson.js"></script>
+<script src="js/lib/jquery.tabletojson.min.js"></script>
+<script src="js/lib/sheetrock.min.js"></script>
 </body>
 
 </html>
